--- a/TrackNZApp/src/main/AndroidManifest.xml
+++ b/TrackNZApp/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
+        <!-- Enable Samsung MultiWindow -->
+        <meta-data android:name="com.samsung.android.sdk.multiwindow.enable" android:value="true" />
+
         <!-- Receivers -->
         <receiver
             android:name=".receiver.BackgroundNotificationReceiver"
@@ -83,5 +86,6 @@
                 android:value=".activity.MainActivity" />
         </activity>
     </application>
+
 
 </manifest>
