--- a/TrackNZApp/build.gradle
+++ b/TrackNZApp/build.gradle
@@ -41,8 +41,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:cardview-v7:23.2.0'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.android.support:design:23.2.0'
     compile 'com.getbase:floatingactionbutton:1.10.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
