--- a/TrackNZApp/build.gradle
+++ b/TrackNZApp/build.gradle
@@ -50,8 +50,10 @@ ribbonizer {
         }
     }
 }
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.android.support:design:23.3.0'
@@ -59,4 +61,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.google.zxing:android-integration:3.2.1'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
 }
